# ChangeLog for app-doc/doxygen
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/ChangeLog,v 1.174 2010/02/08 19:21:51 abcd Exp $

  08 Feb 2010; Jonathan Callen <abcd@gentoo.org>
  +files/doxygen-1.5.6-prefix-misc-alt.patch, doxygen-1.6.1.ebuild:
  Bump to EAPI=3, add prefix support/keywords/patch

  17 Jan 2010; Dominik Kapusta <ayoy@gentoo.org> doxygen-1.5.9.ebuild,
  doxygen-1.6.1.ebuild:
  Ported to qt4-r2 eclass + switched to EAPI="2" for 1.5.9

  02 Jan 2010; Ben de Groot <yngwin@gentoo.org> doxygen-1.4.7.ebuild,
  doxygen-1.5.4.ebuild, doxygen-1.5.5.ebuild, doxygen-1.5.6.ebuild,
  doxygen-1.5.7.1.ebuild:
  Drop qt3 support

  26 Dec 2009; Peter Volkov <pva@gentoo.org> doxygen-1.4.7.ebuild,
  doxygen-1.5.4.ebuild, doxygen-1.5.5.ebuild, doxygen-1.5.6.ebuild,
  doxygen-1.5.7.1.ebuild, doxygen-1.5.8-r1.ebuild, doxygen-1.5.9.ebuild,
  doxygen-1.6.1.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

*doxygen-1.6.1 (25 Sep 2009)

  25 Sep 2009; Steve Arnold <nerdboy@gentoo.org> -doxygen-1.6.0.ebuild,
  +doxygen-1.6.1.ebuild:
  Updated to current release; fixes eigen borkage plus a few other issues 
  (closes bugs 282598 and 283780).

  27 Aug 2009; Raúl Porcel <armin76@gentoo.org> doxygen-1.5.8-r1.ebuild:
  arm/ia64/sh/s390 stable wrt #263641

  27 Aug 2009; Steve Arnold <nerdboy@gentoo.org> doxygen-1.5.4.ebuild,
  doxygen-1.5.8-r1.ebuild, doxygen-1.5.9.ebuild, doxygen-1.6.0.ebuild:
  Update missing latex font deps (closes bug 274673).

*doxygen-1.5.9 (25 Aug 2009)

  25 Aug 2009; Steve Arnold <nerdboy@gentoo.org> +doxygen-1.5.9.ebuild:
  Adding version 1.5.9 until some issues are worked out.  This fixes some
  problems with 1.5.8, and 1.6.0 is masked for time being.  Fixes bug
  #275753.

*doxygen-1.6.0 (25 Aug 2009)

  25 Aug 2009; Steve Arnold <nerdboy@gentoo.org>
  +files/doxygen-1.5-dot-eps.patch, +doxygen-1.6.0.ebuild: