@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/ChangeLog,v 1.174 2010/02/08 19:21:51 abcd Exp $
 
+  24 Sep 2010; Nathan Phillip Brink (ohnobinki)
+  <ohnobinki@ohnopublishing.net> +doxygen-1.7.1.ebuild:
+  Import app-doc/doxyugen-1.7.1 so that I might forward-port my multilib
+  fixes.
+
   08 Feb 2010; Jonathan Callen <abcd@gentoo.org>
   +files/doxygen-1.5.6-prefix-misc-alt.patch, doxygen-1.6.1.ebuild:
   Bump to EAPI=3, add prefix support/keywords/patch
